--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "^46.0.21",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native": "0.71.6",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.9",
     "react-native-elements": "^3.4.3",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11"
   },
