--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-windows/cli": "^0.71.4"
   },
   "private": true
 }
