--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "^7.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@rneui/base": "^4.0.0-rc.7",
@@ -19,6 +18,7 @@
     "expo": "^48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
