--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "^48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
