--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "event-countdown-app",
   "version": "1.0.0",
+  "homepage": "http://dev.github.io/expo-gh-pages",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -30,7 +31,8 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^5.0.0"
   },
   "private": true
 }
